kafka/4.11/modules/ROOT/pages/kafka-connector-troubleshooting.adoc
= Troubleshooting Apache Kafka Connector 4.11

To troubleshoot Anypoint Connector for Apache Kafka (Apache Kafka Connector), become familiar with the information about interpreting commonly thrown exception messages.

== Enable FIPS mode

Enable FIPS mode by setting the following flag to true. This will add com.sun.security.sasl.Provider security provider in the FIPS environment.

`com.mulesoft.connectors.allow-registration-of-sasl-security-provider-in-fips=true`


include::connectors::partial$ssl-logs.adoc[]

include::connectors::partial$verbose-exception-logs.adoc[]

include::connectors::partial$verbose-logs-com.adoc[]

== Troubleshoot Common Errors

Here is a list of the common Apache Kafka Connector errors and how to resolve them:

* <<failed-to-load-ssl-keystore>>

[[failed-to-load-ssl-keystore]]
=== Failed to Load SSL Keystore

When the Kafka Connector configurations fail to load the required truststore files from the classpath, you receive the following error:

[source,text,linenums]
----
org.mule.runtime.api.connection.ConnectionException: Failed to load SSL keystore
----

The Kafka Connector configurations bundled with a dependency fail to establish connections even when the required truststore files are available in the classpath.

To resolve this error:

Add the required truststore files to the main application that uses the Kafka Connector configurations.

== Troubleshooting clientDNSLookUp Property

Since Kafka Connector version 3.0.0, the default value for the *DNS Lookup* field was removed to keep the connector backwards compatible. Kafka Connector keeps the same values as the previous version, but now each value corresponds to the following properties:


[%header%autowidth.spread]
|===
|Value |Property 
| DEFAULT | use_all_dns_ips 
| USE_ALL_DNS_IPS | use_all_dns_ips 
| RESOLVE_CANONICAL_BOOTSTRAP_SERVERS_ONLY | resolve_canonical_bootstrap_servers_only 
|===

== Troubleshooting Publishing Null Values

When the *Publish* operation receives null as input, the operation publishes an empty byte array.

To avoid this issue, the connector enables you to set the `mule.kafka.publish.useNull` boolean system property.

* When set to `true`, the connector publishes a message with null as a value.
* When set to `false` or not set at all, the connector publishes a message with an empty byte array value.

For further information on how to configure properties, refer to the xref:mule-runtime::mule-app-properties-system.adoc[Use system properties]

== Understand Commonly Thrown Exceptions

Here is a list of commonly thrown exception messages and how to interpret them:

* KAFKA:ALREADY_COMMITTED

 A commit fails because the commit is already performed.

* KAFKA:AUTHENTICATION_ERROR(SECURITY)

 An authentication error is thrown.

* KAFKA:AUTHORIZATION_ERROR(CLIENT_SECURITY)

 An authorization error occurred due to the client configuration or permissions.

* KAFKA:COMMIT_FAILED

 A commit fails with an unrecoverable error.

* KAFKA:CONNECTIVITY

 Either a connection could not be established or there is a connectivity error.

* KAFKA:ILLEGAL_STATE

 The consumer is not subscribed to any topics, and no manually assigned partitions are set to consume from.

* KAFKA:INPUT_TOO_LARGE

 The input is too large for the broker.

* KAFKA:INVALID_ACK_MODE

 An acknowledgement (ACK) or negative acknowledgement (NACK) operation is run over a consumer that is not in `MANUAL` mode.

* KAFKA:INVALID_CONFIGURATION

 An invalid configuration value is set for the consumer or the producer.

* KAFKA:INVALID_CONNECTION

 The referenced connection is invalid.

* KAFKA:INVALID_INPUT

 The parameters set for the operation are incorrect.

* KAFKA:INVALID_OFFSET

 The partition number set for the operation is less than `0`, is above the number of partitions, or is an invalid value.

* KAFKA:INVALID_TOPIC

 The topic selected for the operation is invalid, and there is no automatic generation of said topic. This might also imply an invalid character in the topic name.

* KAFKA:INVALID_TOPIC_PARTITION

 The topic partition combination selected for the operation is invalid, and there is no automatic generation of topics. This might also imply an invalid character in the topic name, or a non-existing partition.

* KAFKA:NO_POLL_MADE

 No poll was made.

* KAFKA:NOT_FOUND

 For consume operations, the poll does not bring any records for the configured timeouts.

* KAFKA:OUT_OF_RANGE

 There is no reset policy defined, and the offsets for these partitions are either larger or smaller than the range of offsets the server has for the given partition.

* KAFKA:PREVIOUS_ASSIGNATION

 subscribe() is called previously with topics or pattern without a subsequent call to unsubscribe().

* KAFKA:PRODUCER_FENCED

 Another producer with the same `transactional.id` is active.

* KAFKA:RETRY_EXHAUSTED

 The maximum number of retries for the operation is reached.

* KAFKA:SESSION_NOT_FOUND

 No associated session is found when executing an operation.

* KAFKA:TIMEOUT

 A specific request takes longer than the configuration timeout values.

== See Also

* xref:connectors::introduction/introduction-to-anypoint-connectors.adoc[Introduction to Anypoint Connectors]
* xref:kafka-connector-reference.adoc[Apache Kafka Connector Reference]
* https://help.mulesoft.com[MuleSoft Help Center]
* https://help.mulesoft.com[MuleSoft Help Center]
include::release-notes::partial$release-notes/rn-known-issues.adoc[tag=knownIssuesSeeAlsoLink]
